Reorder sections, add new section on physical interpretation of problem.

--- a/introduction.tex
+++ b/introduction.tex
@@ -95,18 +95,13 @@ Following this, we will also examine the performance of the solver using PMLs to
 
 
 
-% ----------------------------------------------
-
-\section{Historical background}
-
-\iffalse
-Motivation.
-Who cares? Why is it difficult?
-What are the benefits?
-Need some citations? Names in the field...
-\fi
-
-
+% \section{Historical background}
+% \iffalse
+% Motivation.
+% Who cares? Why is it difficult?
+% What are the benefits?
+% Need some citations? Names in the field...
+% \fi
 
 Because of the fundamental nature of waves, the wave equation has widespread application and appears in several contexts in science, engineering, and industry.
 For example, in electromagnetics, Maxwell's equations describe the physical properties of waves generated from electric and magnetic fields.
@@ -129,7 +124,29 @@ The wave and Helmholtz equations are closely linked, and study of one can lead t
 When seeking separable solutions of the wave equation, the Helmholtz equation appears as a time-independent form of the wave equation.
 The solutions of the time-independent equation represent steady state solutions.
 
-The specific problem 
+
+
+
+
+
+% --------------------------------------
+
+\section{Physical interpretations}
+
+\iffalse
+	An example of a physical context for the problem
+	Underwater
+	Seismology
+	Acoustics
+	In each case:
+		What does the solution represent?
+		What do the boundary conditions represent?
+		What is the state of the field for these applications? E.g. other applications to the same problem.
+\fi
+
+
+
+
 
 
 
