Add new section on CSLP.

--- a/problem.tex
+++ b/problem.tex
@@ -127,6 +127,19 @@ To further aid in comparison between solutions, we will also consider this case.
 
 % ----------------------------------------
 
+\section{Complex-shifted Laplacian}
+
+
+
+
+
+
+
+
+
+
+% ----------------------------------------
+
 \section{Problem domain}
 
 The full wave equation is defined in three spatial dimensions in cylindrical coordinates.
