Work for the day..

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,1 +1,10 @@
 \chapter{Conclusion}
+
+
+Further work
+- Check the method on non-Dirichlet bcs
+- Implement the PML for infinite domain
+
+- What about differently shaped domains?
+    We have only looked at axisymmetric cylinder (square)
+
