--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,10 @@
 \usepackage{graphicx}
 \usepackage{tikz}
 \usepackage{subfig}
+\usepackage{pgfplots}
+\usepackage{pgfplotstable}
+
+\pgfplotsset{compat=1.5.1}
 
 \usetikzlibrary{arrows}
 \tikzstyle{arrow} = [thick,->,>=stealth]
