--- a/problem.tex
+++ b/problem.tex
@@ -183,8 +183,54 @@ achieves this by ensuring that sources scatter to infinity and do not come from 
 	% Need an example image of a 3d cylinder - the domain for the problem -- away from the 
 	% Also the 2d section of the cylinder
 	\centering
-	\subfloat[][Full cylindrical domain. \label{fig:full_domain}]{\includegraphics[draft]{images/placeholder}}\\
-	\subfloat[][Reduced dimensional domain. \label{fig:reduced_domain}]{\includegraphics[draft]{images/placeholder}}
+	\subfloat[][Full cylindrical domain. \label{fig:full_domain}]{
+\begin{tikzpicture}[scale=2.5, >=latex]
+  % AXES
+  % z-axis
+  \draw[->] (0.5,0) -- (0.5,1.7) node[left, scale=1.3] {$z$};
+  % r-axis
+  \draw[->] (0.5,0) -- (1.7,0) node[below, scale=1.3] {$r$};
+  % phi-axis
+  \draw[->] (0.5,0) -- (0.1,-0.4) node[left, scale=1.3] {$\varphi$};
+
+  % INNER CYLINDER
+  % top ellipse
+  \draw[solid] (0.5,1.2) ellipse (0.3 and 0.09);
+  % bottom ellipse
+  \draw[dashed] (0.5,0) ellipse (0.3 and 0.09);
+  
+  % left line
+  \draw[dashed] (0.2,0) -- ++(0,1.2);
+  % right line
+  \draw[dashed] (0.8,0) -- ++(0,1.2);
+
+
+  % OUTER CYLINDER
+  % top ellipse
+  \draw[solid] (1.5,1.2) arc (0:180:1 and 0.3);
+  \draw[solid] (-0.5,1.2) arc (180:360:1 and 0.3);
+  % bottom ellipse
+  \draw[dashed] (1.5,0) arc (0:180:1 and 0.3);
+  \draw[solid] (-0.5,0) arc (180:360:1 and 0.3);
+  
+  % left line
+  \draw (-0.5,0) -- ++(0,1.2);
+  % right line
+  \draw (1.5,0) -- ++(0,1.2);
+\end{tikzpicture}	
+	}\quad
+	\subfloat[][Reduced dimensional domain. \label{fig:reduced_domain}]{
+		\begin{tikzpicture}[scale=3, >=latex]
+  % z-axis
+  \draw[->] (0,0) -- ++(0,1.6) node[left, scale=1.3] {$z$};
+  % r-axis
+  \draw[->] (0,0) -- ++(1.7,0) node[below, scale=1.3] {$r$};
+
+  \draw[solid] (0.3,0.15) -- ++(1,0) -- ++(0,1.2) -- ++(-1,0);
+  \draw[dashed] (0.3,0.15) -- ++(0,1.2);
+
+\end{tikzpicture}
+	}
 	\caption{Problem domain.\label{fig:problem_domain}}
 \end{figure}
 
