Change explanation to be more FEM based, over FD.

--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 
 \pgfplotsset{compat=1.5.1}
 
-\usetikzlibrary{arrows}
+\usetikzlibrary{arrows,decorations.markings}
 \tikzstyle{arrow} = [thick,->,>=stealth]
 
 \def \oomph {\texttt{oomph-lib} }
