--- a/problem.tex
+++ b/problem.tex
@@ -117,7 +117,7 @@ These two parameters together classify solutions for the problem.
 
 
 
-\subsection{The Poisson problem}
+\subsection{Related problems and other issues}
 
 In the case where $k=0$, the problem reduces to the Poisson problem.
 Taking $k=0$ in equation \eqref{eqn:fhh}, we obtain
@@ -132,6 +132,47 @@ Since we are interested in how multigrid performs when solving \eqref{eqn:fhh}, 
 Another related problem is the case when both $k=0$ and $N=0$.
 This is the Poisson equation in reduced coordinates, with a solution depending only on $r$ and $z$.
 To further aid in comparison between solutions, we will also consider this case.
+
+
+% Variable coefficients --------------
+
+A common issue with multigrid occurs with variable coefficient problems.
+\cite{briggs}
+% To demonstrate this, 
+% Consider the one dimensional equation
+% \begin{align}
+% 	\left( a(x)u'(x) \right)' = f(x)
+% \end{align}
+% This is generally an issue when $a(x)$ is highly variable.
+
+In Cartesian coordinates, the Helmholtz equation is a constant coefficient problem.
+The operator we have in this case is
+\begin{align}
+	\nabla^2 + k^2 = \frac{\partial^2}{\partial x^2} + \frac{\partial^2}{\partial t^2} + \frac{\partial^2}{\partial z^2} + k^2.
+\end{align}
+Taking $k=0$, we obtain the Laplace operator.
+This is especially well behaved for multigrid methods.
+Aside from the issues mentioned above, particularly with matrices becoming indefinite for larger values of $k^2$, this equation has constant coefficients.
+Therefore, combining the preconditioning discussed in section \ref{sec:precond}, multigrid should converge appropriately.
+Indeed, the multigrid implementation within \oomph for the Cartesian solver behaves as expected.
+
+In cylindrical coordinates, however, we have a term that varies proportional to the inverse of the radial distance squared.
+For the full Fourier decomposed Helmholtz equation, recall equation \eqref{eqn:fhh},
+\begin{align}
+	\frac{\partial^2 u_N}{\partial r^2}
+			 + \frac{1}{r} \frac{\partial u_N}{\partial r}
+			 + \frac{\partial^2 u_N}{\partial z^2}
+			 + (k^2 - \frac{N^2}{r^2})u_N = 0. \label{eqn:full_fhh}
+\end{align}
+
+Before any theoretical work to attempt to remedy issues arising from variable coefficients, we should first be certain that a problem exists with multigrid applied to the cylindrical problem.
+Since the implementation of multigrid within \oomph exists for the Cartesian case, we can begin here.
+With some slight modifications, the same code can be used to solve the problem in cylinderical coordinates.
+% Mention the changes made?
+Running the modified code to compute a solution resulted in a failure.
+The general error was lack of convergence in the FGMRES solver.
+To deduce the precide nature of the error, more analysis of the problem is necessary.
+
 
 
 
